app/Service_nginx-example_my-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-08-25T20:21:18Z"
  labels:
    app: nginx
  name: my-nginx
  namespace: nginx-example-foo
  resourceVersion: "50728"
  selfLink: /api/v1/namespaces/nginx-example/services/my-nginx
  uid: 0137f822-05e2-11ec-8f30-06066a06d4a7
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: nginx
  sessionAffinity: None
  type: LoadBalancer
